--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ python:
 
 addons:
   postgresql: "9.6"
-  postgresql: "9.3" # minimal postgresql version for the base_import_security_group module
-                    # more info: https://github.com/OCA/maintainer-quality-tools/issues/432
   apt:
     packages:
       - expect-dev  # provides unbuffer utility
@@ -16,12 +14,12 @@ addons:
 
 env:
   global:
-  - VERSION="12.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
+  - VERSION="12.0" TESTS="0" LINT_CHECK="0" MAKEPOT="0"
 
   matrix:
   - LINT_CHECK="1"
   - TESTS="1" ODOO_REPO="OCA/OCB"
-  - TESTS="1" ODOO_REPO="odoo/odoo"
+  - TESTS="1" ODOO_REPO="odoo/odoo" MAKEPOT="1"
 
 install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
