--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,14 +1,15 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.3.6
+_commit: v1.5.1
 _src_path: gh:oca/oca-addons-repo-template
-ci: Travis
+ci: GitHub
 dependency_installation_mode: PIP
 generate_requirements_txt: true
 include_wkhtmltopdf: false
 odoo_version: 14.0
 rebel_module_groups: []
-repo_description: 'TODO: add repo description.'
-repo_name: server-brand
+repo_description: (De)branding related modules.
+repo_name: Server Brand
 repo_slug: server-brand
 travis_apt_packages: []
 travis_apt_sources: []
+
