--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,14 +1,18 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.3.6
+_commit: v1.5.2
 _src_path: gh:oca/oca-addons-repo-template
 ci: GitHub
 dependency_installation_mode: PIP
 generate_requirements_txt: true
 include_wkhtmltopdf: false
 odoo_version: 15.0
+org_name: Odoo Community Association (OCA)
+org_slug: OCA
 rebel_module_groups: []
-repo_description: 'TODO: add repo description.'
-repo_name: server-brand
+repo_description: Modules to help remove Odoo branding and advertising.
+repo_name: Tools for removing Odoo branding
 repo_slug: server-brand
+repo_website: https://github.com/OCA/server-brand
 travis_apt_packages: []
 travis_apt_sources: []
+
